<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/splashscreen"
        tools:showPaths="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SplashActivity">

    <View android:layout_width="match_parent" android:layout_height="match_parent"
          android:background="@android:color/white" android:id="@+id/root"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/fullscreen_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/crete_round"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.294"
            app:layout_constraintHorizontal_bias="0.073"
            android:text="We are safe together!"
    />

    <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.08"
            app:layout_constraintHorizontal_bias="0.498"
            app:srcCompat="@drawable/ic_helmet_green"
    />

    <TextView
            android:text="@string/sign_in_to_continue_text"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subtitle"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/fullscreen_content"
            app:layout_constraintStart_toStartOf="@+id/fullscreen_content"
    />
    <TextView
            android:text="Skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSkip"

            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/root"/>
    <Button
            android:text="@string/login_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/buttonLogin"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewSkip"
            app:layout_constraintStart_toStartOf="@+id/subtitle"
            app:layout_constraintEnd_toEndOf="@+id/fullscreen_content"
            android:layout_marginEnd="8dp"
            android:textAllCaps="false"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textSize="18sp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSignUp" app:layout_constraintStart_toStartOf="@+id/fullscreen_content"
            android:layout_marginBottom="60dp" app:layout_constraintBottom_toTopOf="@+id/buttonLogin"/>
    <TextView
            android:text="@string/forgot_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewForgotPassword" app:layout_constraintEnd_toEndOf="@+id/fullscreen_content"
            android:layout_marginBottom="60dp" app:layout_constraintBottom_toTopOf="@+id/buttonLogin"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewSignUp"
            app:layout_constraintStart_toStartOf="@+id/fullscreen_content"
            app:layout_constraintEnd_toEndOf="@+id/fullscreen_content" android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" android:id="@+id/textInputLayoutPassword">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint_text" android:id="@+id/password"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/fullscreen_content"
            app:layout_constraintEnd_toEndOf="@+id/fullscreen_content" android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutPassword" android:id="@+id/textInputLayoutEmail">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint_text" android:id="@+id/email"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
